@@ -2,6 +2,9 @@ Routes Changelog
 ========================
 
 -- 1.7.0 (**svn**)
+* Fixed route matching so that '.' and other special chars are only part of the
+  match should they not be followed by that character. Fixed regexp creation so
+  that route parts with '.' in them aren't matched properly. Fixes #48.
 * Fixed Unicode decoding/encoding so that the URL decoding and encoding can be
   set on the mapper with mapper.encoding. Fixes #40.
 * Don't assume environ['CONTENT_TYPE'] always exists: it may be ommitted
